--- a/example/Enter.Dashboard/Pages/Index.razor
+++ b/example/Enter.Dashboard/Pages/Index.razor
@@ -12,7 +12,7 @@
 <EntFlex class="h-full" Direction="FlexDirection.Column">
     <div class="row p-8">
         <div class="tablet:col-6">
-            <EntCard Title="Default" Expandable="true" class="mb-8">
+            <EntCard Tag="test" Title="Default" Expandable="true" class="mb-8">
                 <CardBody>
                     <EntFlex Direction="FlexDirection.Column">
                         <b>This page is the default in EntMdiTab</b>
