--- a/Source/Enter.Ui/Components/TreeView/EntTreeView.razor
+++ b/Source/Enter.Ui/Components/TreeView/EntTreeView.razor
@@ -26,7 +26,7 @@
         base.BuildClasses(builder);
     }
 
-    private string Item => ClassBuilder.Clean()
+    private string Item => ClassBuilder.CanUpdate()
         .AddClass("ent-treeview")
         .Build();
 
