--- a/example/Enter.Dashboard/Pages/Documents/FormLayout.razor
+++ b/example/Enter.Dashboard/Pages/Documents/FormLayout.razor
@@ -15,25 +15,25 @@
             <EditForm class="ent-edit-form" Model="Input" OnSubmit="@OnSubmit">
                 <DataAnnotationsValidator/>
                 <div class="row">
-                    <EntInputGroup For="() => Input.Id" Label="شناسه" class="tablet:col-1/3 mb-4 ">
+                    <EntInputGroup For="() => Input.Id" Label="شناسه" class="tablet:col-4 mb-4 ">
                         <EntInputText @bind-Value="Input.Id" Icon="@EntIconName.Dashboard"/>
                     </EntInputGroup>
-                    <EntInputGroup For="() => Input.User" Label="نام" class="tablet:col-1/3 mb-4">
+                    <EntInputGroup For="() => Input.User" Label="نام" class="tablet:col-4 mb-4">
 
                         <EntInputAutoComplete
                             @ref="_autoCompleteReference"
                             @bind-Value="Input.User"
                             ValueFunc="x => x.Name"
-                            TextFunc="x=>x.Name"
+                            
                             DataSources="DataSource"
-                            Icon="@EntIconName.Search"
+                         
                             OnSearchChange="OnLastNameSearchChange"/>
 
                     </EntInputGroup>
                     <EntInputGroup
                         For="() => Input.Role"
                         Label="نقش"
-                        class="tablet:col-1/3 mb-4">
+                        class="tablet:col-4 mb-4">
 
 
                         <EntInputSelect @bind-Value="Input.Role"
@@ -45,7 +45,7 @@
 
                     </EntInputGroup>
                     <EntInputGroup
-                        class="tablet:col-1/3 mb-4 "
+                        class="tablet:col-4 mb-4 "
                         Label="سن"
                         For="() => Input.Age">
                         <EntInputTextarea Rows="10" @bind-Value="Input.Age"/>
@@ -54,7 +54,7 @@
 
                 </div>
                 <div class="row">
-                    <div class="tablet:col-1/3">
+                    <div class="tablet:col-4">
                         <EntButton type="submit">ارسال</EntButton>
                     </div>
                 </div>
