--- a/Source/Enter.Ui/Components/Inputs/EntInputAutoComplete.razor
+++ b/Source/Enter.Ui/Components/Inputs/EntInputAutoComplete.razor
@@ -3,8 +3,8 @@
 @using Enter.Ui.Components.Icon
 @using System.Diagnostics.CodeAnalysis
 @typeparam T
-<div @attributes="@AdditionalAttributes" class="@ClassNames" @ref="_elementReference" id="@Id">
-    <EntInputText @ref="_inputReference" EventType="oninput" class="@("ent-input-autocomplete-input")"
+<div @attributes="@AdditionalAttributes" class="@ClassNames" style="@StyleNames" @ref="_elementReference" id="@Id">
+    <EntInputText  @ref="_inputReference" EventType="oninput" class="@("ent-input-autocomplete-input")"
                   Value="@Value" ValueChanged="@ValueChanged" Disabled="@Disabled" Readonly="@Readonly" @onclick="@Click" @onfocusin="@Click"
                   ValueExpression="@ValueExpression" @oninput="@OnInputCallback" Icon="@EntIconName.Search"/>
 
@@ -47,9 +47,11 @@
         return Task.CompletedTask;
     }
 
-    private string ClassNames => ClassBuilder
-        .AddClass("ent-input-autocomplete")
-        .Build();
+    protected override void BuildClasses(ClassBuilder builder)
+    {
+        builder.AddClass("ent-input-autocomplete");
+        base.BuildClasses(builder);
+    }
 
 
     private bool _showMenu = false;
