--- a/Source/Enter.Ui/Components/AppBar/EntAppBar.razor
+++ b/Source/Enter.Ui/Components/AppBar/EntAppBar.razor
@@ -1,6 +1,6 @@
 ﻿@using Enter.Ui.Components.Button
 @using Enter.Ui.Components.Icon
-@inherits Enter.Ui.Bases.EntComponentBase
+@inherits Enter.Ui.Bases.EntComponentComponent
 @namespace Enter.Ui.Components
 <div @attributes="@AdditionalAttributes" class="@ClassNames">
     @if (ShowBack)
