--- a/Source/Enter.Ui/Components/Expanable/EntExpandable.razor
+++ b/Source/Enter.Ui/Components/Expanable/EntExpandable.razor
@@ -3,7 +3,7 @@
 @using Enter.Ui.Components.Expandable
 @using Enter.Ui.JsServices
 @using Microsoft.JSInterop
-@inherits Enter.Ui.Bases.EntComponentBase
+@inherits Enter.Ui.Bases.EntComponentComponent
 
 <EntAnimator @attributes="@AdditionalAttributes"
              @ref="Reference"
