--- a/Source/Enter.Ui/Components/Inputs/EntInputGroup.razor
+++ b/Source/Enter.Ui/Components/Inputs/EntInputGroup.razor
@@ -2,7 +2,7 @@
 
 @typeparam TValue;
 @using System.Linq.Expressions
-@inherits Enter.Ui.Bases.EntComponentBase
+@inherits Enter.Ui.Bases.EntComponentComponent
 
 <div @attributes="@AdditionalAttributes" class="@ClassNames" id="@Id">
     @if (Label != null)
