--- a/Source/Enter.Ui/Components/NavMenu/EntNavMenuTitle.razor
+++ b/Source/Enter.Ui/Components/NavMenu/EntNavMenuTitle.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.Ui.Components
 @using Enter.Ui.Components.Text
-@inherits Enter.Ui.Bases.EntComponentBase
+@inherits Enter.Ui.Bases.EntComponentComponent
 
 <EntText Type="EntTextType.Bold" Size="EntTextSize.Subtitle">
     @Title
