--- a/Source/Enter.Ui/Components/Shimmer/EntShimmer.razor
+++ b/Source/Enter.Ui/Components/Shimmer/EntShimmer.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.Ui.Components
 @using Enter.Ui.Components.Shimmer
-@inherits Enter.Ui.Bases.EntComponentBase
+@inherits Enter.Ui.Bases.EntComponentComponent
 <span @attributes="@AdditionalAttributes" class="@ClassNames" style="@StyleNames">
 </span>
 
