--- a/Source/Enter.Ui/Components/Tabs/EntMdiTab.razor
+++ b/Source/Enter.Ui/Components/Tabs/EntMdiTab.razor
@@ -1,4 +1,4 @@
-﻿@inherits EntTabBase
+﻿@inherits EntTabComponentComponent
 @namespace Enter.Ui.Components
 <EntTab @ref="_tab"
         @attributes="@AdditionalAttributes"
