--- a/Source/Enter.Ui/Components/Tabs/EntTab.razor
+++ b/Source/Enter.Ui/Components/Tabs/EntTab.razor
@@ -1,6 +1,6 @@
 ﻿@using Enter.Ui.Components.Icon
 @using Enter.Ui.Components.Button
-@inherits EntTabBase
+@inherits EntTabComponentComponent
 @namespace Enter.Ui.Components
 <CascadingValue Value="@(this)">
     <div @attributes="@AdditionalAttributes" class="@ClassNames">
