--- a/Source/Enter.Ui/Components/Theme/EntThemeProvider.razor
+++ b/Source/Enter.Ui/Components/Theme/EntThemeProvider.razor
@@ -1,7 +1,7 @@
 ﻿@using Enter.Ui.JsServices
 @using Microsoft.JSInterop
 @namespace Enter.Ui.Components
-@inherits Enter.Ui.Bases.EntElementComponentBase
+@inherits Enter.Ui.Bases.EntElementComponent
 @if (_shouldRender)
 {
     <CascadingValue Value="this" IsFixed="true">
