--- a/Source/Enter.Ui/Components/TreeView/EntTreeView.razor
+++ b/Source/Enter.Ui/Components/TreeView/EntTreeView.razor
@@ -2,7 +2,7 @@
 
 @typeparam TValue
 @using Enter.Ui.Components.TreeView
-@inherits Enter.Ui.Bases.EntComponentBase
+@inherits Enter.Ui.Bases.EntComponentComponent
 
 
 <CascadingValue Value="this" IsFixed="true">
