--- a/Source/Enter.Ui/Components/UploadBox/EntUploadBox.razor
+++ b/Source/Enter.Ui/Components/UploadBox/EntUploadBox.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.Ui.Components
 @using Enter.Ui.Components.Icon
-@inherits Enter.Ui.Bases.EntComponentBase
+@inherits Enter.Ui.Bases.EntComponentComponent
 
 <div
     @attributes="@AdditionalAttributes"
