--- a/Source/Enter.Ui/Components/Utilities/Division/EntDivision.razor
+++ b/Source/Enter.Ui/Components/Utilities/Division/EntDivision.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.Ui.Components
 <div @attributes="AdditionalAttributes" class="@ClassNames">@ChildContent</div>
-@inherits Enter.Ui.Bases.EntComponentBase
+@inherits Enter.Ui.Bases.EntComponentComponent
 
 @code {
 
