--- a/Source/Enter.Ui/Components/Utilities/Flex/EntFlex.razor
+++ b/Source/Enter.Ui/Components/Utilities/Flex/EntFlex.razor
@@ -1,7 +1,7 @@
 ﻿@namespace Enter.Ui.Components
 <div class="@ClassNames">@ChildContent</div>
 @using Enter.Ui.Components.Flex
-@inherits Enter.Ui.Bases.EntComponentBase
+@inherits Enter.Ui.Bases.EntComponentComponent
 
 @code {
     private readonly string _flexRow = "flex-row";
