--- a/Source/Enter.Ui/Styles/components/_ent_form.component.scss
+++ b/Source/Enter.Ui/Styles/components/_ent_form.component.scss
@@ -127,6 +127,7 @@
 
   > .ent-select-input {
     border: 0;
+    width: 100%;
 
     .ent-select-input-placeholder {
       color: var(--ent-input-color-placeholder);
