--- a/Source/Enter.Ui/Components/Loading/EntCircularLoading.razor
+++ b/Source/Enter.Ui/Components/Loading/EntCircularLoading.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.Ui.Components
 @using Enter.Ui.Components.Loading
-@inherits Enter.Ui.Bases.EntComponentBase
+@inherits Enter.Ui.Bases.EntComponentComponent
 <span @attributes="@AdditionalAttributes" class="@ClassNames">
 </span>
 
