--- a/Source/Enter.Ui/Components/NavMenu/EntNavMenuGroup.razor
+++ b/Source/Enter.Ui/Components/NavMenu/EntNavMenuGroup.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.Ui.Components
 @using Enter.Ui.Components.Icon
-@inherits Enter.Ui.Bases.EntComponentBase
+@inherits Enter.Ui.Bases.EntComponentComponent
 <div @attributes="AdditionalAttributes" class="@ClassNames">
     <div class="ent-nav-menu-group-item" @onclick="@ToggleItem">
         @if (Icon != null)
