--- a/Source/Enter.Ui/Components/Pagination/EntPagination.razor
+++ b/Source/Enter.Ui/Components/Pagination/EntPagination.razor
@@ -1,7 +1,7 @@
 @namespace Enter.Ui.Components
 @using Enter.Ui.Components.Icon
 @using System.Diagnostics.CodeAnalysis
-@inherits Enter.Ui.Bases.EntComponentBase
+@inherits Enter.Ui.Bases.EntComponentComponent
 
 
 <ul @attributes="@AdditionalAttributes" class="@ClassNames">
