--- a/Source/Enter.Ui/Components/Popover/EntPopover.razor
+++ b/Source/Enter.Ui/Components/Popover/EntPopover.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.Ui.Components
 @using Enter.Ui.Services
-@inherits Enter.Ui.Bases.EntComponentBase
+@inherits Enter.Ui.Bases.EntComponentComponent
 
 <div @attributes="@AdditionalAttributes" class="@ClassNames" id="@($"ent-popover-{_id}")">
 
