--- a/Source/Enter.Ui/Components/Popover/EntPopoverProvider.razor
+++ b/Source/Enter.Ui/Components/Popover/EntPopoverProvider.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.Ui.Components
 @using Enter.Ui.Services
-@inherits Enter.Ui.Bases.EntComponentBase
+@inherits Enter.Ui.Bases.EntComponentComponent
 <div class="@ClassNames">
     @foreach (var item in _entPopoverService.PopoverInstances)
     {
