--- a/Source/Enter.Ui/Components/Table/EntTable.razor
+++ b/Source/Enter.Ui/Components/Table/EntTable.razor
@@ -1,5 +1,5 @@
 ﻿@namespace Enter.Ui.Components
-@inherits Enter.Ui.Bases.EntComponentBase
+@inherits Enter.Ui.Bases.EntComponentComponent
 @typeparam T
 <CascadingValue Value="this">
     <table @attributes="AdditionalAttributes" class="@ClassNames">
