--- a/Source/Enter.Ui/Components/TreeView/EntTreeViewItem.razor
+++ b/Source/Enter.Ui/Components/TreeView/EntTreeViewItem.razor
@@ -1,7 +1,7 @@
 ﻿@namespace Enter.Ui.Components
 @typeparam TValue
 @using Enter.Ui.Components.Icon
-@inherits Enter.Ui.Bases.EntComponentBase
+@inherits Enter.Ui.Bases.EntComponentComponent
 
 <CascadingValue Value="this" IsFixed="true">
     <li @attributes="@AdditionalAttributes" class="@ClassNames" @onclick="Select" @onclick:stopPropagation>
