--- a/Source/Enter.Ui/Components/Inputs/EntInputFile.razor
+++ b/Source/Enter.Ui/Components/Inputs/EntInputFile.razor
@@ -2,6 +2,8 @@
 @inherits Enter.Ui.Bases.EntInputBase<string?>
 @using Enter.Ui.Components.Icon
 @using System.Diagnostics.CodeAnalysis
+@using Enter.Ui.Cores.Core
+@using Enter.Ui.Cores.Extensions
 @implements IAsyncDisposable
 
 <div @attributes="@AdditionalAttributes" class="@ClassNames" id="@Id">
