--- a/Source/Enter.Ui/Components/Inputs/EntInputText.razor
+++ b/Source/Enter.Ui/Components/Inputs/EntInputText.razor
@@ -1,6 +1,8 @@
 ﻿@using Enter.Ui.Components.Inputs
 @using Enter.Ui.Components.Icon
 @using System.Diagnostics.CodeAnalysis
+@using Enter.Ui.Cores.Core
+@using Enter.Ui.Cores.Extensions
 @namespace Enter.Ui.Components
 @inherits Enter.Ui.Bases.EntInputBase<string?>
 
