--- a/Source/Enter.Ui/Components/Inputs/EntInputTextarea.razor
+++ b/Source/Enter.Ui/Components/Inputs/EntInputTextarea.razor
@@ -1,6 +1,8 @@
 ﻿@namespace Enter.Ui.Components
 @inherits Enter.Ui.Bases.EntInputBase<string?>
 @using System.Diagnostics.CodeAnalysis
+@using Enter.Ui.Cores.Core
+@using Enter.Ui.Cores.Extensions
 @implements IAsyncDisposable
 
 <div @attributes="@AdditionalAttributes" class="@ClassNames" id="@Id">
