--- a/Source/Enter.Ui/Components/Loading/EntLinearLoading.razor
+++ b/Source/Enter.Ui/Components/Loading/EntLinearLoading.razor
@@ -1,5 +1,6 @@
 ﻿@namespace Enter.Ui.Components
 @using Enter.Ui.Components.Loading
+@using Enter.Ui.Cores.Core
 @inherits Enter.Ui.Bases.EntComponentComponent
 <span @attributes="@AdditionalAttributes" class="@ClassNames" style="@StyleNames">
     @if (Indeterminate)
