--- a/Source/Enter.Ui/Components/Modal/EntMessageBox.razor
+++ b/Source/Enter.Ui/Components/Modal/EntMessageBox.razor
@@ -2,6 +2,7 @@
 @inherits Enter.Ui.Bases.EntComponentComponent
 @using Enter.Ui.Components.Text
 @using Enter.Ui.Components.Button
+@using Enter.Ui.Cores.Core
 @implements IDisposable
 <div class="@ClassNames">
     <EntText Type="EntTextType.Bold" class="ent-messagebox-title">@Message</EntText>
