--- a/Source/Enter.Ui/Components/Popover/EntPopoverProvider.razor
+++ b/Source/Enter.Ui/Components/Popover/EntPopoverProvider.razor
@@ -1,5 +1,6 @@
 ﻿@namespace Enter.Ui.Components
-@using Enter.Ui.Services
+@using Enter.Ui.Cores.Core
+@using Enter.Ui.Cores.Contracts
 @inherits Enter.Ui.Bases.EntComponentComponent
 <div class="@ClassNames">
     @foreach (var item in _entPopoverService.PopoverInstances)
