--- a/example/Enter.Dashboard/Pages/Documents/MdiTabPage.razor
+++ b/example/Enter.Dashboard/Pages/Documents/MdiTabPage.razor
@@ -1,5 +1,5 @@
 ﻿@page "/documents/mdi-tabs"
-@using Enter.Ui.Services
+@using Enter.Ui.Cores.Contracts
 @inherits Enter.Ui.Bases.EntPageBase
 @layout DocumentLayout
 
