--- a/example/Enter.Dashboard/Pages/Documents/TreeViewPage.razor
+++ b/example/Enter.Dashboard/Pages/Documents/TreeViewPage.razor
@@ -1,9 +1,10 @@
 ﻿@page "/documents/treeview"
-@using Enter.Ui.Core.Extensions
 @using Enter.Ui.Core
 @using Enter.Ui.Components.Icon
 @using Enter.Ui.Components.TreeView
 @using Enter.Ui.Components.Button
+@using Enter.Ui.Cores.Core
+@using Enter.Ui.Cores.Extensions
 @layout DocumentLayout
 <div class="p-4">
 
