--- a/example/Enter.Dashboard/Pages/Index.razor
+++ b/example/Enter.Dashboard/Pages/Index.razor
@@ -3,7 +3,7 @@
 @using Enter.Ui.Components.Flex
 @using Enter.Ui.Components.Modal
 @using Enter.Ui.Components.Toast.Services
-@using Enter.Ui.Services
+@using Enter.Ui.Cores.Contracts
 
 @layout DocumentLayout
 
