--- a/example/Enter.Dashboard/Shared/DocumentLayout.razor
+++ b/example/Enter.Dashboard/Shared/DocumentLayout.razor
@@ -3,8 +3,8 @@
 @using Enter.Ui.Components.Drawer
 @using Enter.Ui.Components.Icon
 @using Enter.Ui.Components.Toast.Configuration
-@using Enter.Ui.Core.Enums
-@using Enter.Ui.Services
+@using Enter.Ui.Cores.Contracts
+@using Enter.Ui.Cores.Enums
 
 @implements IDisposable
 <div class="h-full border-y d-flex flex-column">
