--- a/example/Enter.Dashboard/Shared/MainLayout.razor
+++ b/example/Enter.Dashboard/Shared/MainLayout.razor
@@ -1,8 +1,8 @@
 ﻿@using Enter.Ui.Components.Drawer
 @using Enter.Ui.Components.Icon
-@using Enter.Ui.Services
 @using Enter.Ui.Components.Button
 @using Enter.Dashboard.Components
+@using Enter.Ui.Cores.Contracts
 @inherits LayoutComponentBase
 <div class="border-y d-flex flex-column">
     <div class="d-flex flex-column flex-grow-1">
