--- a/Source/Enter.Ui/Components/AppBar/EntAppBar.razor
+++ b/Source/Enter.Ui/Components/AppBar/EntAppBar.razor
@@ -1,5 +1,6 @@
 ﻿@using Enter.Ui.Components.Button
 @using Enter.Ui.Components.Icon
+@using Enter.Ui.Cores.Core
 @inherits Enter.Ui.Bases.EntComponentComponent
 @namespace Enter.Ui.Components
 <div @attributes="@AdditionalAttributes" class="@ClassNames">
@@ -23,8 +24,6 @@
         base.BuildClasses(builder);
     }
 
-    [Parameter]
-    public RenderFragment? ChildContent { get; set; }
 
     [Parameter]
     public EventCallback ToggleClick { get; set; }
