--- a/Source/Enter.Ui/Components/Buttons/EntButton.razor.scss
+++ b/Source/Enter.Ui/Components/Buttons/EntButton.razor.scss
@@ -1,10 +1,11 @@
-﻿/* 
+/* 
 todo: 
   1- disable button
   2- focus button
 */
 
-:root {
+
+.ent-btn {
 
 
   --ent-btn-bg: var(--ent-bg-neutral);
@@ -16,10 +17,7 @@ todo:
   --ent-btn-stroke: var(--ent-border-color);
   --ent-btn-stroke-width: var(--ent-border-1);
   --ent-btn-border-radius: var(--ent-border-radius-2);
-}
-
-.ent-btn {
-
+  
   align-items: center;
   box-sizing: border-box;
   display: inline-flex;
@@ -52,8 +50,8 @@ todo:
       background: var(--ent-btn-bg-hover);
       color: var(--ent-btn-fg-hover);
 
-      .icon {
-        color: var(--ent-btn-fg-hover);
+      ::deep .ent-btn-icon {
+        color: var(--ent-btn-fg-hover) !important;
       }
     }
 
@@ -61,8 +59,8 @@ todo:
       background: var(--ent-btn-bg-active);
       color: var(--ent-btn-fg-active);
 
-      .icon {
-        color: var(--ent-btn-fg-hover);
+      ::deep .ent-btn-icon {
+        color: var(--ent-btn-fg-active) !important;
       }
 
     }
@@ -74,7 +72,7 @@ todo:
     min-width: unset;
     --ent-btn-space-x: var(--ent-btn-space-y);
 
-    .icon-wrapper {
+     .icon-wrapper {
       margin: 0;
     }
 
@@ -88,19 +86,11 @@ todo:
     justify-content: center;
     margin-inline-end: 6px;
 
-    .icon {
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      font-size: var(--ent-btn-font-size);
-      width: var(--ent-btn-font-size);
-      height: var(--ent-btn-font-size);
-      color: var(--ent-btn-fg);
-    }
+   
 
     transition: var(--ent-transition-all);
   }
-
+  
 }
 
 .ent-btn-primary {
@@ -127,17 +117,7 @@ todo:
   --ent-btn-stroke: var(--ent-stroke-primary);
 }
 
-.ent-btn-subtle {
-  --ent-btn-bg: var(--ent-bg-neutral-subtle);
-  --ent-btn-fg: var(--ent-fg-base);
-  --ent-btn-stroke: var(--ent-bg-neutral-subtle);
-}
 
-.ent-btn-subtle.ent-btn-primary {
-  --ent-btn-bg: var(--ent-bg-primary-subtle);
-  --ent-btn-fg: var(--ent-fg-primary);
-  --ent-btn-stroke: var(--ent-bg-primary-subtle);
-}
 
 .ent-btn-ghost {
   --ent-btn-bg: transparent;
@@ -181,4 +161,15 @@ todo:
 
   --ent-btn-font-size: var(--ent-typo-font-size-lg);
   --ent-btn-line-height: var(--ent-typo-line-height-lg);
+}
+
+
+::deep .ent-btn-icon {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-size: var(--ent-btn-font-size) !important;
+  width: var(--ent-btn-font-size) !important;
+  height: var(--ent-btn-font-size) !important;
+  color: var(--ent-btn-fg) !important;
 }
