--- a/Source/Enter.Ui/Components/Card/EntCard.razor
+++ b/Source/Enter.Ui/Components/Card/EntCard.razor
@@ -1,5 +1,6 @@
 ﻿@namespace Enter.Ui.Components
 @using Enter.Ui.Components.Icon
+@using Enter.Ui.Cores.Core
 @inherits Enter.Ui.Bases.EntComponentComponent
 
 <div @attributes="@AdditionalAttributes" class="@ClassNames">
