--- a/Source/Enter.Ui/Components/Inputs/EntInputAutoComplete.razor
+++ b/Source/Enter.Ui/Components/Inputs/EntInputAutoComplete.razor
@@ -2,6 +2,8 @@
 @inherits Enter.Ui.Bases.EntInputBase<string>
 @using Enter.Ui.Components.Icon
 @using System.Diagnostics.CodeAnalysis
+@using Enter.Ui.Cores.Core
+@using Enter.Ui.Cores.Enums
 @typeparam T
 <div @attributes="@AdditionalAttributes" class="@ClassNames" style="@StyleNames" @ref="_elementReference" id="@Id">
     <EntInputText  @ref="_inputReference" EventType="oninput" class="@("ent-input-autocomplete-input")"
