--- a/Source/Enter.Ui/Components/Inputs/EntInputSelect.razor
+++ b/Source/Enter.Ui/Components/Inputs/EntInputSelect.razor
@@ -2,6 +2,8 @@
 @inherits Enter.Ui.Bases.EntInputBase<string>
 @using Enter.Ui.Components.Icon
 @using System.Diagnostics.CodeAnalysis
+@using Enter.Ui.Cores.Core
+@using Enter.Ui.Cores.Enums
 @typeparam T
 
 <div @attributes="@AdditionalAttributes" @ref="_elementReference" class="@ClassNames" id="@Id">
