--- a/Source/Enter.Ui/Components/Shimmer/EntShimmer.razor
+++ b/Source/Enter.Ui/Components/Shimmer/EntShimmer.razor
@@ -1,5 +1,6 @@
 ﻿@namespace Enter.Ui.Components
 @using Enter.Ui.Components.Shimmer
+@using Enter.Ui.Cores.Core
 @inherits Enter.Ui.Bases.EntComponentComponent
 <span @attributes="@AdditionalAttributes" class="@ClassNames" style="@StyleNames">
 </span>
