--- a/Source/Enter.Ui/Components/TreeView/EntTreeViewItem.razor
+++ b/Source/Enter.Ui/Components/TreeView/EntTreeViewItem.razor
@@ -1,6 +1,7 @@
 ﻿@namespace Enter.Ui.Components
 @typeparam TValue
 @using Enter.Ui.Components.Icon
+@using Enter.Ui.Cores.Core
 @inherits Enter.Ui.Bases.EntComponentComponent
 
 <CascadingValue Value="this" IsFixed="true">
@@ -55,6 +56,13 @@
         base.BuildClasses(builder);
     }
 
+    protected override Task OnParametersSetAsync()
+    {
+        ClassBuilder?.CanUpdate();
+        StyleBuilder?.CanUpdate();
+        return base.OnParametersSetAsync();
+    }
+    
     [CascadingParameter]
     public EntTreeView<TValue> TreeView { get; set; } = default!;
 
