--- a/Source/Enter.Ui/Components/Utilities/Division/EntDivision.razor
+++ b/Source/Enter.Ui/Components/Utilities/Division/EntDivision.razor
@@ -1,5 +1,6 @@
 ﻿@namespace Enter.Ui.Components
 <div @attributes="AdditionalAttributes" class="@ClassNames">@ChildContent</div>
+@using Enter.Ui.Cores.Core
 @inherits Enter.Ui.Bases.EntComponentComponent
 
 @code {
@@ -11,8 +12,6 @@
         base.BuildClasses(builder);
     }
 
-    [Parameter]
-    public RenderFragment? ChildContent { get; set; }
 
     protected override void Dispose(bool disposing)
     {
